fixed some errors that crashed the container
