# app/openapi/openapi.yaml
@@ -7,15 +7,20 @@ info:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
 tags:
-  - name: Data
-    description: Get data from the server.
+  - name: Batch Data
+    description: Get batch data
+  - name : Stream Data
+    description: Data streamed from broker
+  - name: Authenticate Stream Data Consumer
+    description: Endpoints that the broker uses to authenticate the consumer
   - name: Authenticate
-    description: Get access token required for retrieving data.
+    description: Get access token required for retrieving data
+
 paths:
   '/{data}':
     post:
       tags:
-        - Data
+        - Batch Data
       summary: Get data
       description: ''
       parameters:
@@ -42,9 +47,7 @@ paths:
         description: In the first call block_id and block_ack should have the value null
       responses:
         '200':
-          description: >-
-            Response that contains the block id, the next
-            block id, cipherblock and poO
+          description: Response that contains the block id, the next block id, cipherblock and poO
           content: 
             application/json: 
               schema: 
@@ -57,10 +60,11 @@ paths:
           description: Internal server error
       security:
         - bearerAuth: []
+
   /validatePoR:
     post:
       tags:
-        - Data
+        - Batch Data
       summary: Validate proof of receipt
       parameters: []
       requestBody:
@@ -77,16 +81,17 @@ paths:
         description: Send the proof of receipt generated by the client
       responses:
         '200':
-          description: >-
+          description:
             Proof of receipt validated
           content: 
             application/json: 
               schema: 
                   $ref: "#/components/schemas/JWK"
+
   /createInvoice:
     post:
       tags:
-        - Data
+        - Batch Data
       summary: Create invoice call
       parameters: []
       requestBody:
@@ -106,12 +111,107 @@ paths:
         description: Create invoice call
       responses:
         '200':
-          description: >-
+          description:
             Invoice call created
           content: 
             application/json: 
               schema: 
                   $ref: "#/components/schemas/Invoice"
+  
+  /regds:
+    post:
+      tags:
+        - Stream Data
+      summary: Register a datasource
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - Uid
+                - Description
+                - URL
+                - Action
+              properties:
+                Uid:
+                  type: string
+                Description:
+                  type: string
+                URL:
+                  type: string
+                Action:
+                  type: string
+        description: Create invoice call
+      responses:
+        '200':
+          description:
+            Data Source registered
+  /newdata:
+    post:
+      tags:
+        - Stream Data
+      summary: Endpoint that receives data from data source and then sent to broker
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - uid
+                - data
+              properties:
+                uid:
+                  type: string
+                data:
+                  type: string
+        description: Endpoint that receives data from data source and then sent to broker
+      responses:
+        '200':
+          description:
+            Data sent to broker
+  /user:
+    post:
+      tags:
+        - Authenticate Stream Data Consumer
+      summary: Broker subscriber authentication
+      parameters: []
+      responses:
+        '200':
+          description:
+            OK
+      security:
+        - bearerAuth: []
+  /acl:
+    post:
+      tags:
+        - Authenticate Stream Data Consumer
+      summary: Broker topic validation
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - clientid
+                - topic
+              properties:
+                clientid:
+                  type: string
+                topic:
+                  type: string
+      responses:
+        '200':
+          description:
+            OK
+      security:
+        - bearerAuth: []
   /oidc/login/consumer:
     get:
       tags:
@@ -120,10 +220,9 @@ paths:
       parameters: []
       responses:
         '200':
-          description: >-
-            a QR code is sent and should be scanned with a mobile phone using
-            uPort to get the access token. For testing it is easier to just
-            connect to this endpoint directly from a browser
+          description:
+            Connect to this endpoint directly from a browser to authenticate using the i3m wallet.
+
   /oidc/login/provider:
     get:
       tags:
@@ -132,10 +231,9 @@ paths:
       parameters: []
       responses:
         '200':
-          description: >-
-            a QR code is sent and should be scanned with a mobile phone using
-            uPort to get the access token. For testing it is easier to just
-            connect to this endpoint directly from a browser
+          description:
+            Connect to this endpoint directly from a browser to authenticate using the i3m wallet.
+
 components:
   schemas: 
     DataAccessResponse: 
@@ -194,6 +292,7 @@ components:
           type: string
         TotalAmount:
           type: string
+
   securitySchemes:
     bearerAuth:
       type: http
@@ -201,6 +300,7 @@ components:
       bearerFormat: JWT
 security:
   - bearerAuth: []
+
 servers:
   - url: /
   - url: http://95.211.3.244:3100
